--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Aquí Nomás — DEMO inteligente (V3 IMG ON)</title>
-<!--ID_SYS:AQNM_20251110_V3_IMG_ON-->
+<title>Aquí Nomás — DEMO inteligente (V3 IMG ON FULLUI)</title>
+<!--ID_SYS:AQNM_20251110_V3_IMG_ON_FULLUI-->
 <style>
 :root{--pri:#0b5cff;}
 body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;margin:0;background:#f7f9fb;color:#0b1220}
@@ -37,27 +37,21 @@ button:hover{background:#0048d0}
 const sheetURL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSg0UeYMVZj0b9H2V63XS37oXlIwJ6SL4n-m6WJEbspzM5OP9QA3QF6qSw4fr81dw/pub?gid=1861393565&single=true&output=csv';
 let locales = [];
 
-// --- PARSER CSV QUE RESPETA COMILLAS Y CARGA COMPLETA ---
+// --- parser CSV robusto (respeta comillas) ---
 function parseCSV(text){
-  const rows = [];
-  let row = [];
-  let cur = '';
-  let inQuotes = false;
-
+  const rows=[], row=[], res=[];
+  let cur="", inQuotes=false;
   for(let i=0;i<text.length;i++){
-    const c = text[i];
-    if(c === '"'){
-      if(inQuotes && text[i+1] === '"'){cur += '"'; i++;}
-      else {inQuotes = !inQuotes;}
-    }else if(c === ',' && !inQuotes){
-      row.push(cur); cur = '';
-    }else if((c === '\n' || c === '\r') && !inQuotes){
-      if(cur !== '' || row.length){row.push(cur); rows.push(row); row = []; cur = '';}
-      if(c === '\r' && text[i+1] === '\n') i++;
-    }else{cur += c;}
+    const c=text[i];
+    if(c==='"'){ if(inQuotes && text[i+1]==='"'){cur+='"';i++;} else inQuotes=!inQuotes; }
+    else if(c===',' && !inQuotes){ row.push(cur); cur=''; }
+    else if((c==='\n'||c==='\r') && !inQuotes){
+      if(cur!==''||row.length){row.push(cur);res.push([...row]);row.length=0;cur='';}
+      if(c==='\r'&&text[i+1]==='\n')i++;
+    } else cur+=c;
   }
-  if(cur !== '' || row.length){row.push(cur); rows.push(row);}
-  return rows;
+  if(cur!==''||row.length){row.push(cur);res.push(row);}
+  return res;
 }
 
 async function cargarCSV(){
@@ -66,25 +60,21 @@ async function cargarCSV(){
     const resp = await fetch(sheetURL);
     const data = await resp.text();
     const filas = parseCSV(data);
-    const encabezado = filas.shift().map(h => h.trim());
+    const encabezado = filas.shift().map(h=>h.trim());
     locales = filas.map(f=>{
-      let obj={};
-      encabezado.forEach((h,i)=>{
-        obj[h]=f[i]?f[i].trim().replace(/\r/g,"").replace(/\n/g,""):"";
-      });
+      const obj={};
+      encabezado.forEach((h,i)=>{ obj[h]= (f[i]||"").trim(); });
       return obj;
     });
-    console.log("CSV cargado:",locales.length,"filas");
-  }catch(err){console.error("Error cargando CSV:",err);}
+    console.log("CSV cargado:", locales.length,"filas");
+  }catch(e){ console.error("Error cargando CSV:", e); }
 }
 
 function mostrarResultados(resultados){
   const cont=document.getElementById("resultados");
   cont.innerHTML="";
-  if(resultados.length===0){
-    cont.innerHTML="<p>No se encontraron resultados.</p>";
-    return;
-  }
+  if(!resultados.length){ cont.innerHTML="<p>No se encontraron resultados.</p>"; return; }
+
   resultados.forEach(loc=>{
     const div=document.createElement("div");
     div.className="resultado";
@@ -99,14 +89,18 @@ function mostrarResultados(resultados){
     }
 
     const texto=document.createElement("div");
-    texto.innerHTML=`<strong>${loc.nombre_local}</strong><br>${loc.rubro}<br>${loc.direccion}<br>${loc.promo_texto||""}`;
+    texto.innerHTML=`
+      <strong>${loc.nombre_local||""}</strong><br>
+      ${loc.rubro||""}<br>
+      ${loc.direccion||""}<br>
+      ${loc.promo_texto||""}`;
     div.appendChild(texto);
     cont.appendChild(div);
   });
 }
 
 function buscar(){
-  const q=document.getElementById("busqueda").value.toLowerCase();
+  const q=document.getElementById("busqueda").value.toLowerCase().trim();
   if(!q){document.getElementById("resultados").innerHTML="";return;}
   const resultados=locales.filter(l=>
     (l.nombre_local||"").toLowerCase().includes(q)||
@@ -117,7 +111,8 @@ function buscar(){
   mostrarResultados(resultados);
 }
 
-document.getElementById("btnBuscar").addEventListener("click",buscar);
+document.getElementById("btnBuscar").addEventListener("click", buscar);
+document.getElementById("busqueda").addEventListener("keydown", e => { if(e.key==="Enter") buscar(); });
 document.getElementById("btnLimpiar").addEventListener("click",()=>{
   document.getElementById("busqueda").value="";
   document.getElementById("resultados").innerHTML="";
@@ -133,6 +128,17 @@ document.getElementById("btnVoz").addEventListener("click",()=>{
     document.getElementById("busqueda").value=txt;
     buscar();
   };
+});
+document.getElementById("btnCerca").addEventListener("click",()=>{
+  if(!navigator.geolocation){alert("Geolocalización no soportada.");return;}
+  navigator.geolocation.getCurrentPosition(pos=>{
+    const lat=pos.coords.latitude, lng=pos.coords.longitude;
+    const cerca=locales.filter(l=>{
+      const dlat=parseFloat(l.lat)||0, dlng=parseFloat(l.lng)||0;
+      return Math.abs(dlat-lat)<0.02 && Math.abs(dlng-lng)<0.02;
+    });
+    mostrarResultados(cerca);
+  },()=>alert("No se pudo obtener tu ubicación."));
 });
 
 cargarCSV();
